update kéo card qua lại giữa các card

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vite-trello-web-base-project",
+  "name": "cassani-note",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "author": "TrungQuanDev - Một Lập Trình Viên",
-  "description": "https://youtube.com/@trungquandev",
+  "author": "NguyenQuocHuy",
+  "description": "Dự án môn cơ sở kỹ thuật phần phềm",
   "engines": {
     "node": "18.16.0"
   },
