--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "NguyenQuocHuy",
   "description": "Dự án môn cơ sở kỹ thuật phần phềm",
   "engines": {
-    "node": "18.16.0"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "vite --host",
